<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".administrador">

    <Button
        android:id="@+id/btn_cerrar_sesion_admin"
        android:layout_width="412dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="Cerrar sesión"
        android:textColor="#DF2E2E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnregusuario3"
        android:layout_width="259dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text="@string/eliminar_usuario"
        android:textColor="#143874"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregusuario2" />

    <Button
        android:id="@+id/btnregusuario"
        android:layout_width="259dp"
        android:layout_height="68dp"
        android:background="#FFFFFF"
        android:imeOptions="flagNavigateNext"
        android:text="@string/registrar_usuario"
        android:textColor="#143874"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.11" />

    <Button
        android:id="@+id/btnformulario"
        android:layout_width="259dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text="@string/ver_formularios"
        android:textColor="#143874"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregusuario" />

    <Button
        android:id="@+id/btnregusuario2"
        android:layout_width="259dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text="@string/proximamente"
        android:textColor="#143874"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnformulario" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="437dp"
        android:layout_height="182dp"
        android:background="#143874"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="66dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoensenada" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="214dp"
            android:layout_height="83dp"
            android:gravity="center|left"
            android:text="@string/seguridad"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>