<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="0dp"
        android:background="#143874"
        android:backgroundTint="#FFFFFF">

        <EditText

            android:id="@+id/etxtusuario"
            android:layout_width="339dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/etxtcontrasena"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.876" />

        <EditText
            android:id="@+id/etxtcontrasena"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622" />

        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="339dp"
            android:layout_height="47dp"
            android:background="#143874"
            android:onClick="iniciarSesion"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.733" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="163dp"
            android:layout_height="190dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164"
            app:srcCompat="@drawable/logoensenada" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="412dp"
            android:layout_height="51dp"
            android:background="#143874"
            android:gravity="center"
            android:text="Bienvenido"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>